fix flicker on card flip on ios.

--- a/style.css
+++ b/style.css
@@ -117,16 +117,26 @@ header img{
     position: relative;
     display: -webkit-inline-flex;
     -webkit-flex-wrap: wrap;
+    -webkit-justify-content: center;
+    -webkit-align-items: center;
+
     display: inline-flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+
     top: 0;
     left: 0;
     width: 100%;
     height: 50%;
     margin: 0;
     padding: 0;
+
+   -webkit-perspective: 1000;
+   -moz-perspective: 1000;
+   -ms-perspective: 1000;
+   -o-perspective: 1000;
+   perspective: 1000;
 }
 .mapContainer{
     position: relative;
@@ -155,6 +165,17 @@ header img{
     margin: 5px;
     border-radius: 10%;
     z-index: 1;
+
+   /*-webkit-transform-style: preserve-3d;*/
+   -webkit-transition: 0.5s;
+   /*-moz-transform-style: preserve-3d;*/
+   -moz-transition: 0.5s;
+   /*-ms-transform-style: preserve-3d;*/
+   -ms-transition: 0.5s;
+   /*-o-transform-style: preserve-3d;*/
+   -o-transition: 0.5s;
+   /*transform-style: preserve-3d;*/
+   transition: 0.5s;
 }
 /* hide back of pane during swap */
 .front, .back {
@@ -168,8 +189,17 @@ header img{
     top: 0;
     left: 0;
 
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    backface-visibility: hidden;
+
     -webkit-transition: -webkit-transform 0.5s;
     transition: transform 0.5s;
+
+    /*-webkit-transition: -webkit-transform 2.5s;
+    transition: transform 2.5s;*/
 }
 /*remember front of card has the coin image*/
 .front {
@@ -181,28 +211,38 @@ header img{
     -webkit-transform: rotateY(-180deg);
     transform: rotateY(-180deg);
     box-shadow: -1px 1px black;
+
+    /*-webkit-backface-visibility: hidden;
+    backface-visibility: hidden;*/
 }
 /*remember back of card has the NPS logo image*/
 .back {
     background-color: saddlebrown;
-    z-index: 2;
-
     background-image: url('resources/nps_logo_transparent_large.png');
     background-size: 100% 100%;
     box-shadow: 1px 1px black;
+    z-index: 2;
 
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
+    /*-webkit-backface-visibility: visible;
+    backface-visibility: visible;*/
 }
 .card.cardClicked .front {
-    -webkit-transform: rotateY(0deg);
-    transform: rotateY(0deg);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+
+    -webkit-transform: rotateY(0deg) translateZ(1px);
+    transform: rotateY(0deg) translateZ(1px);
     box-shadow: 1px 1px black;
+    /*z-index: 2;*/
 }
 .card.cardClicked .back {
-    -webkit-transform: rotateY(-180deg);
-    transform: rotateY(-180deg);
+    -webkit-transform: rotateY(-180deg) translateZ(1px);
+    transform: rotateY(-180deg) translateZ(1px);
     box-shadow: -1px 1px black;
+    /*z-index: 1;*/
+
+    /*-webkit-backface-visibility: hidden;
+    backface-visibility: hidden;*/
 }
 .card.matched .front{
     /*performs the transition when clicked*/
